expand functionality